Change menu home page mobile and desktop responsiv

--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
    <head>
       <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui">
+      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, minimal-ui">
       <title>NextLane Auto</title>
       <link href="favicon.png" type="image/x-icon" rel="shortcut icon">
       <link href="assets/css/master.css" rel="stylesheet">
@@ -151,25 +151,49 @@
                   </div>
                </div>
                <!-- Floating Buttons Section -->
-               <div class="floating-buttons">
-                  <div class="header__inner">
-                     <div class="container">
-                        <div class="row">
-                           <div class="col-md-12 col-xs-12">
-                              <ul class="button-list">
-                                 <li><a href="new_vehicle.html">Vehicles</a></li>
-                                 <li><a href="trade_or_sell_your_vehicle.html">Trade or Sell Your Vehicle</a></li>
-                                 <li><a href="credit_application.html">Credit Application</a></li>
-                                 <li><a href="get_pre_qualified.html">Get Pre-Qualified in Seconds</a></li>
-                                 <li><a href="request_a_free_quote.html">Request a Free Quote</a></li>
-                                 <li><a href="about-us.html">About Us</a></li>
-                                 <li><a href="contact_us.html">Contact Us</a></li>
-                              </ul>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
+<!-- Mobile Navigation -->
+<div id="navbar-collapse-1" class="navbar-collapse collapse mobile-menu">
+   <ul class="nav navbar-nav">
+       <li><a href="new_vehicle.html">Vehicles</a></li>
+       <li><a href="trade_or_sell_your_vehicle.html">Trade or Sell Your Vehicle</a></li>
+       <li><a href="credit_application.html">Credit Application</a></li>
+       <li><a href="get_pre_qualified.html">Get Pre-Qualified in Seconds</a></li>
+       <li class="dropdown">
+           <a href="request_a_free_quote.html">Request a Free Quote</a>
+       </li>
+       <li><a href="about-us.html">About Us</a></li>
+       <li><a href="contact_us.html">Contact Us</a></li>
+   </ul>
+</div>
+
+<!-- Floating Buttons Section -->
+<div class="floating-buttons desktop-menu">
+   <div class="header__inner">
+       <div class="container">
+           <div class="row">
+               <div class="col-md-12 col-xs-12">
+                   <ul class="button-list">
+                       <li><a href="new_vehicle.html">Vehicles</a></li>
+                       <li><a href="trade_or_sell_your_vehicle.html">Trade or Sell Your Vehicle</a></li>
+                       <li><a href="credit_application.html">Credit Application</a></li>
+                       <li><a href="get_pre_qualified.html">Get Pre-Qualified in Seconds</a></li>
+                       <li><a href="request_a_free_quote.html">Request a Free Quote</a></li>
+                       <li><a href="about-us.html">About Us</a></li>
+                       <li><a href="contact_us.html">Contact Us</a></li>
+                   </ul>
                </div>
+           </div>
+       </div>
+   </div>
+</div>
+
+
+
+
+
+
+
+
             </div>
             <!-- end main-slider -->
             <section class="section_mod-a section-bg-2">
@@ -180,13 +204,13 @@
                            <div class="main-block text-center wow bounceInUp" data-wow-duration="2s">
                               <div class="main-block__label">welcome to</div>
                               <div class="decor-1 center-block"></div>
-                              <h1 class="main-block__title"><strong>AUTOZONE</strong>the ONLINE AUTOS world</h1>
+                              <h1 class="main-block__title"><strong>NextLane Auto</strong>the ONLINE AUTOS world</h1>
                               <div class="decor-2"><i class="icon fa fa-caret-down"></i></div>
                            </div>
                            <div class="wrap-link-img">
                               <ul class="link-img link-img_mod-a list-inline wow bounceInLeft" data-wow-duration="2s">
                                  <li class="link-img__item">
-                                    <a class="link-img__link" href="javascript:void(0);">
+                                    <a class="link-img__link" href="new_vehicle.html">
                                        <img class="img-responsive" src="assets/media/link-img/1.png" height="250" width="170" alt="Foto">
                                        <div class="link-img__wrap-title"><span class="link-img__title">all brands</span></div>
                                     </a>
@@ -271,8 +295,8 @@
                                     <i class="icon flaticon-repairing4"></i>
                                     <div class="decor-1"></div>
                                     <div class="list-services__inner">
-                                       <h3 class="list-services__title">Vehicle <strong>REPAIRING</strong></h3>
-                                       <div class="list-services__description">Wliquam sit amet urna sed vel nullam semper aibers vestibulum fringilla</div>
+                                       <h3 class="list-services__title">Lease <strong>FINANCE</strong></h3>
+                                       <div class="list-services__description">Lease or finance.</div>
                                     </div>
                                  </div>
                                  <!-- end list-services -->
@@ -280,8 +304,8 @@
                                     <i class="icon flaticon-speakers17"></i>
                                     <div class="decor-1"></div>
                                     <div class="list-services__inner">
-                                       <h3 class="list-services__title">Audio System <strong>INSTALLATION</strong></h3>
-                                       <div class="list-services__description">Wliquam sit amet urna sed vel nullam semper aibers vestibulum fringilla</div>
+                                       <h3 class="list-services__title">Trade-ins <strong>INSURANCE</strong></h3>
+                                       <div class="list-services__description">Trade-ins, lease returns, and insurance.</div>
                                     </div>
                                  </div>
                                  <!-- end list-services -->
@@ -289,28 +313,28 @@
                                     <i class="icon flaticon-transport391"></i>
                                     <div class="decor-1"></div>
                                     <div class="list-services__inner">
-                                       <h3 class="list-services__title">Auto Painting <strong>REPAIRING</strong></h3>
-                                       <div class="list-services__description">Wliquam sit amet urna sed vel nullam semper aibers vestibulum fringilla</div>
+                                       <h3 class="list-services__title">lease returns <strong>INSURANCE</strong></h3>
+                                       <div class="list-services__description">Trade-ins, lease returns, and insurance.</div>
                                     </div>
-                                 </div>
+                                 </div> 
                                  <!-- end list-services -->
                                  <div class="list-services">
                                     <i class="icon flaticon-wheels10"></i>
                                     <div class="decor-1"></div>
                                     <div class="list-services__inner">
-                                       <h3 class="list-services__title">Wheel <strong>BALANCING</strong></h3>
-                                       <div class="list-services__description">Wliquam sit amet urna sed vel nullam semper aibers vestibulum fringilla</div>
+                                       <h3 class="list-services__title">Body shop <strong>REFERRALS</strong></h3>
+                                       <div class="list-services__description">Body shop referrals.</div>
                                     </div>
                                  </div>
                                  <!-- end list-services -->
-                                 <div class="list-services">
+                               <!--  <div class="list-services">
                                     <i class="icon flaticon-transport391"></i>
                                     <div class="decor-1"></div>
                                     <div class="list-services__inner">
                                        <h3 class="list-services__title">Audio System <strong>INSTALLATION</strong></h3>
                                        <div class="list-services__description">Wliquam sit amet urna sed vel nullam semper aibers vestibulum fringilla</div>
                                     </div>
-                                 </div>
+                                 </div> --> 
                                  <!-- end list-services --> 
                               </div>
                               <!-- end slider-services --> 
@@ -1150,74 +1174,7 @@
                <!-- end section_mod-b --> 
             </div>
             <!-- end wrap-section-border -->
-            <section class="section_map section-bg-2 wow bounceInUp" data-wow-duration="2s">
-               <div class="container">
-                  <div class="row">
-                     <div class="col-xs-12">
-                        <h2 class="ui-title-block">Contact us</h2>
-                        <div class="ui-subtitle-block_mod-b">Sed euismod ullamcorper tortsed ipsum dui</div>
-                     </div>
-                     <!-- end col --> 
-                  </div>
-                  <!-- end row --> 
-               </div>
-               <!-- end container -->
-               <div class="map"><img class="img-responsive" src="assets/img/map.jpg" height="520" width="1600" alt="map"></div>
-               <div class="container text-center">
-                  <div class="row">
-                     <div class="col-xs-12">
-                        <div class="decor-2"><i class="icon fa fa-caret-down"></i></div>
-                        <h2 class="ui-title-inner">feel free to send us a message <br>
-                           or ask for a FREE quote
-                        </h2>
-                        <div class="decor-1 center-block"></div>
-                     </div>
-                     <!-- end col --> 
-                  </div>
-                  <!-- end row -->
-                  <div class="row">
-                     <div class="col-sm-10 col-sm-offset-1">
-                        <form class="form-contact" action="post">
-                           <div class="row">
-                              <div class="col-sm-6">
-                                 <input class="form-control" type="text" placeholder="First Name" required>
-                              </div>
-                              <!-- end col -->
-                              <div class="col-sm-6">
-                                 <input class="form-control" type="text" placeholder="Last Name" required>
-                              </div>
-                              <!-- end col --> 
-                           </div>
-                           <!-- end row -->
-                           <div class="row">
-                              <div class="col-sm-6">
-                                 <input class="form-control" type="text" placeholder="Phone No." required>
-                              </div>
-                              <!-- end col -->
-                              <div class="col-sm-6">
-                                 <input class="form-control" type="text" placeholder="Subject" required>
-                              </div>
-                              <!-- end col --> 
-                           </div>
-                           <!-- end row -->
-                           <div class="row">
-                              <div class="col-xs-12">
-                                 <textarea class="form-control" placeholder="Message Details ..." required rows="7"></textarea>
-                                 <div class="btn">
-                                    <div class="wrap__btn-skew-r">
-                                       <button class="btn-skew-r btn-effect "><span class="btn-skew-r__inner">send message</span></button>
-                                    </div>
-                                 </div>
-                              </div>
-                           </div>
-                           <!-- end row -->
-                        </form>
-                     </div>
-                  </div>
-                  <!-- end row --> 
-               </div>
-               <!-- end container --> 
-            </section>
+       
             <!-- end section_default -->
             <footer class="footer wow bounceInUp" data-wow-duration="2s">
                <div class="wrap-section-border">
