--- a/home.html
+++ b/home.html
@@ -245,13 +245,13 @@
                            </ul>
                            <ul class="link-img link-img_mod-b list-inline wow bounceInRight" data-wow-duration="2s">
                               <li class="link-img__item">
-                                 <a class="link-img__link" href="javascript:void(0);">
+                                 <a class="link-img__link" href="new_vehicle.html">
                                     <img class="img-responsive" src="assets/media/link-img/3.png" height="250" width="170" alt="Foto">
                                     <div class="link-img__wrap-title"><span class="link-img__title">DEALERSHIP</span></div>
                                  </a>
                               </li>
                               <li class="link-img__item">
-                                 <a class="link-img__link" href="javascript:void(0);">
+                                 <a class="link-img__link" href="get_pre_qualified.html">
                                     <img class="img-responsive" src="assets/media/link-img/4.png" height="250" width="170" alt="Foto">
                                     <div class="link-img__wrap-title"><span class="link-img__title">AFFORDABLE</span></div>
                                  </a>
