--- a/trade_or_sell_your_vehicle.html
+++ b/trade_or_sell_your_vehicle.html
@@ -73,11 +73,21 @@
          border-radius: 4px;
          cursor: pointer;
          font-size: 1em;
-         font-weight: bold;
-         text-transform: uppercase;
          }
          button:hover {
-         background-color: #000000;
+         background-color:#000000;
+         }
+         .form-footer button {
+         width: 100%;
+         padding: 10px 20px;
+         background-color: #e00e0e;
+         color: #fff;
+         border: none;
+         border-radius: 3px;
+         cursor: pointer;
+         }
+         .form-footer button:hover {
+         background-color: #000000;;
          }
          .upload-section {
          margin-top: 20px;
@@ -311,7 +321,10 @@
                <label for="source">How did you hear about us? <span style="color: #e00e0e;">*</span></label>
                <input type="text" id="source" name="source" required>
                <p><span style="color: #e00e0e;">*</span>Estimated trade-in value is subject to change based on the in-person inspection of your vehicle.</p>
-               <button type="submit">Submit</button>
+              <!-- <button type="submit">Submit</button> -->
+               <div class="form-footer">
+                  <button type="submit">SUBMIT</button>
+               </div>
             </form>
          </div>
          <!-- end new block -->
