contact us php working v1 01-14-2025

--- a/contact_us.html
+++ b/contact_us.html
@@ -212,29 +212,29 @@
                      <form class="form-contact" action="php/free_quote.php" method="POST">
                         <div class="row">
                            <div class="col-sm-6">
-                              <input class="form-control" type="text" placeholder="First Name" required>
+                              <input id="firstName" class="form-control" type="text" placeholder="First Name" required>
                            </div>
                            <!-- end col -->
                            <div class="col-sm-6">
-                              <input class="form-control" type="text" placeholder="Last Name" required>
+                              <input id="lastName" class="form-control" type="text" placeholder="Last Name" required>
                            </div>
                            <!-- end col --> 
                         </div>
                         <!-- end row -->
                         <div class="row">
                            <div class="col-sm-6">
-                              <input class="form-control" type="text" placeholder="Phone No." required>
+                              <input id="phoneNo" class="form-control" type="text" placeholder="Phone No." required>
                            </div>
                            <!-- end col -->
                            <div class="col-sm-6">
-                              <input class="form-control" type="text" placeholder="Subject" required>
+                              <input id="subject" class="form-control" type="text" placeholder="Subject" required>
                            </div>
                            <!-- end col --> 
                         </div>
                         <!-- end row -->
                         <div class="row">
                            <div class="col-xs-12">
-                              <textarea class="form-control" placeholder="Message Details ..." required rows="7"></textarea>
+                              <textarea id="message" class="form-control" placeholder="Message Details ..." required rows="7"></textarea>
                               <div class="btn">
                                  <div class="wrap__btn-skew-r">
                                     <button class="btn-skew-r btn-effect "><span class="btn-skew-r__inner">send message</span></button>
