--- a/home.html
+++ b/home.html
@@ -50,7 +50,7 @@
                <div class="container">
                   <div class="row">
                      <div class="col-xs-12">
-                      <!--  <a href="home.html" class="logo"> <img class="logo__img img-responsive" src="assets/nla.png" height="50" width="111" alt="Logo"> </a> -->
+                        <a href="home.html" class="logo"> <img class="logo__img img-responsive" src="assets/nla.png" height="50" width="111" alt="Logo"> </a>
                         <div class="header-contacts"> <span class="header-contacts__item"><i class="icon fa fa-phone"></i>(516) 912-6413 </span> <a class="header-contacts__item" href="mailto:sales@nextlaneauto.com"><i class="icon fa fa-envelope"></i>sales@nextlaneauto.com</a> </div>
                         <ul class="social-links list-inline">
                            <li><a class="icon fa fa-facebook" href="https://www.facebook.com/share/1BQfSxZhQk/?mibextid=wwXIfr"></a></li>
@@ -156,9 +156,9 @@
                <div class="container">
                    <div class="row">
                        <div class="col-md-12 col-xs-12">
-                           <a href="home.html" class="logo">
+                        <!--   <a href="home.html" class="logo">
                                <img class="logo__img img-responsive" src="assets/nla.png" height="50" width="111" alt="Logo">
-                           </a>
+                           </a> -->
                            <div class="navbar yamm">
                                <!-- Navbar header for mobile toggle button -->
                                <div class="navbar-header hidden-md hidden-lg hidden-sm">
