fotter an header changes 01-14-2025

--- a/home.html
+++ b/home.html
@@ -50,8 +50,8 @@
                <div class="container">
                   <div class="row">
                      <div class="col-xs-12">
-                        <a href="home.html" class="logo"> <img class="logo__img img-responsive" src="assets/nla.png" height="50" width="111" alt="Logo"> </a>
-                        <div class="header-contacts"> <span class="header-contacts__item"><i class="icon fa fa-phone"></i>(516) 912-6413 </span> <a class="header-contacts__item" href="mailto:sales@nextlaneauto.com"><i class="icon fa fa-envelope"></i>sales@nextlaneauto.com</a> </div>
+                       <!-- <a href="home.html" class="logo"> <img class="logo__img img-responsive" src="assets/nla.png" height="50" width="111" alt="Logo"> </a>
+                        <div class="header-contacts"> <span class="header-contacts__item"><i class="icon fa fa-phone"></i>(516) 912-6413 </span> <a class="header-contacts__item" href="mailto:sales@nextlaneauto.com"><i class="icon fa fa-envelope"></i>sales@nextlaneauto.com</a> </div> -->
                         <ul class="social-links list-inline">
                            <li><a class="icon fa fa-facebook" href="https://www.facebook.com/share/1BQfSxZhQk/?mibextid=wwXIfr"></a></li>
                            <!--  <li><a class="icon fa fa-twitter" href="javascript:void(0);"></a></li> -->
@@ -316,26 +316,41 @@
                                  <i class="icon flaticon-repairing4"></i>
                                  <div class="decor-1"></div>
                                  <div class="list-services__inner">
-                                    <h3 class="list-services__title">Lease <strong>FINANCE</strong></h3>
-                                    <div class="list-services__description">Lease or finance.</div>
+                                    <h3 class="list-services__title"><strong>LEASE</strong></h3>
+                                    <div class="list-services__description">Nextlane Auto Lease.</div>
+                                 </div>
+                              </div>
+                              <div class="list-services">
+                                 <i class="icon flaticon-repairing4"></i>
+                                 <div class="decor-1"></div>
+                                 <div class="list-services__inner">
+                                    <h3 class="list-services__title"><strong>FINANCE</strong></h3>
+                                    <div class="list-services__description">Nextlane Auto Finance.</div>
                                  </div>
                               </div>
                               <!-- end list-services -->
                               <div class="list-services">
-                                 <i class="icon flaticon-speakers17"></i>
+                                 <i class="icon flaticon-automobile5"></i>
                                  <div class="decor-1"></div>
                                  <div class="list-services__inner">
-                                    <h3 class="list-services__title">Trade-ins <strong>INSURANCE</strong></h3>
-                                    <div class="list-services__description">Trade-ins, lease returns, and insurance.</div>
+                                    <h3 class="list-services__title"><strong>TRADE-INS</strong></h3>
+                                    <div class="list-services__description">Nextlane Auto Trade-ins.</div>
                                  </div>
                               </div>
-                              <!-- end list-services -->
                               <div class="list-services">
                                  <i class="icon flaticon-transport391"></i>
                                  <div class="decor-1"></div>
                                  <div class="list-services__inner">
-                                    <h3 class="list-services__title">lease returns <strong>INSURANCE</strong></h3>
-                                    <div class="list-services__description">Trade-ins, lease returns, and insurance.</div>
+                                    <h3 class="list-services__title"><strong>LEASE RETURNS</strong></h3>
+                                    <div class="list-services__description">Nextlane Auto Lease Returns.</div>
+                                 </div>
+                              </div>
+                              <div class="list-services">
+                                 <i class="icon flaticon-repairing4"></i>
+                                 <div class="decor-1"></div>
+                                 <div class="list-services__inner">
+                                    <h3 class="list-services__title"><strong>INSURANCE</strong></h3>
+                                    <div class="list-services__description">Nextlane Auto Insurance.</div>
                                  </div>
                               </div>
                               <!-- end list-services -->
@@ -343,8 +358,8 @@
                                  <i class="icon flaticon-wheels10"></i>
                                  <div class="decor-1"></div>
                                  <div class="list-services__inner">
-                                    <h3 class="list-services__title">Body shop <strong>REFERRALS</strong></h3>
-                                    <div class="list-services__description">Body shop referrals.</div>
+                                    <h3 class="list-services__title"><strong>BODY SHOP REFERRALS</strong></h3>
+                                    <div class="list-services__description">Nextlane Auto Body Shop Referrals.</div>
                                  </div>
                               </div>
                               <!-- end list-services -->
@@ -1227,8 +1242,8 @@
                            <!-- end row -->
                            <div class="row">
                               <div class="col-xs-12">
-                                 <div class="footer__name">: SHOWROOM LOCATION :</div>
-                                 <div class="footer__text">1430 Broadway STE 1200 New York, NY 10018</div>
+                                 <div class="footer__name">LOCATION:</div>
+                                 <div class="footer__text">1430 Broadway STE 1200, New York, NY 10018</div>
                               </div>
                               <!-- end col --> 
                            </div>
@@ -1238,8 +1253,8 @@
                                  <div class="footer__item"> <span class="footer__name">Phone:</span> <span class="footer__text">(516) 912-6413</span> </div>
                                  <!-- <div class="footer__item"> <span class="footer__name">Fax:</span> <span class="footer__text">+1 (234) 567 8998</span> </div> -->
                                  <div class="footer__item"> <span class="footer__name">email:</span> <span class="footer__text">sales@nextlaneauto.com</span> </div>
-                                 <div class="footer__item"> <span class="footer__name">Hours:</span> <span class="footer__text">Mon - Fri :: 9am - 5pm</span> </div>
-                                 <div class="footer__item"> <span class="footer__name">Hours:</span> <span class="footer__text">Sat - Sun :: 10am - 4pm</span> </div>
+                                 <div class="footer__item"> <span class="footer__name">Hours:</span> <span class="footer__text">Mon - Fri : 9am - 5pm</span> </div>
+                                 <div class="footer__item"> <span class="footer__name">Hours:</span> <span class="footer__text">Sat - Sun : 10am - 4pm</span> </div>
                               </div>
                               <!-- end col --> 
                            </div>
@@ -1266,7 +1281,7 @@
                </div>
                <!-- end wrap-section-border -->
                <div class="footer__wrap-btn"> <a class="footer__btn scroll" href="#this-top">top</a> </div>
-               <div class="copyright">Copyrights 2024 - 2025 <a class="copyright__link" href="javascript:void(0);">NextLane Auto</a> : : All rights reserved</div>
+               <div class="copyright">Copyrights 2024 - 2025 <a class="copyright__link" href="javascript:void(0);">NextLane Auto</a> : All rights reserved</div>
             </footer>
          </div>
          <!-- end #wrapper --> 
