--- a/contact_us.html
+++ b/contact_us.html
@@ -100,10 +100,10 @@
                <div class="container">
                   <div class="row">
                      <div class="col-xs-12">
-                        <div class="header-contacts">
+                       <!-- <div class="header-contacts">
                            <span class="header-contacts__item"><i class="icon fa fa-phone"></i>(516) 912-6413 </span>
                            <a class="header-contacts__item" href="mailto:sales@nextlaneauto.com"><i class="icon fa fa-envelope"></i>sales@nextlaneauto.com</a>
-                        </div>
+                        </div> -->
                         <ul class="social-links list-inline">
                            <li><a class="icon fa fa-facebook" href="https://www.facebook.com/share/1BQfSxZhQk/?mibextid=wwXIfr"></a></li>
                           <!-- <li><a class="icon fa fa-twitter" href="javascript:void(0);"></a></li> -->
@@ -212,29 +212,29 @@
                      <form class="form-contact" action="php/free_quote.php" method="POST">
                         <div class="row">
                            <div class="col-sm-6">
-                              <input id="firstName" class="form-control" type="text" placeholder="First Name" required>
+                              <input id="firstName" name="firstName" class="form-control" type="text" placeholder="First Name" required>
                            </div>
                            <!-- end col -->
                            <div class="col-sm-6">
-                              <input id="lastName" class="form-control" type="text" placeholder="Last Name" required>
+                              <input id="lastName" name="lastName" class="form-control" type="text" placeholder="Last Name" required>
                            </div>
                            <!-- end col --> 
                         </div>
                         <!-- end row -->
                         <div class="row">
                            <div class="col-sm-6">
-                              <input id="phoneNo" class="form-control" type="text" placeholder="Phone No." required>
+                              <input id="phoneNo" name="phoneNo" class="form-control" type="text" placeholder="Phone No." required>
                            </div>
                            <!-- end col -->
                            <div class="col-sm-6">
-                              <input id="subject" class="form-control" type="text" placeholder="Subject" required>
+                              <input id="subject" name="subject" class="form-control" type="text" placeholder="Subject" required>
                            </div>
                            <!-- end col --> 
                         </div>
                         <!-- end row -->
                         <div class="row">
                            <div class="col-xs-12">
-                              <textarea id="message" class="form-control" placeholder="Message Details ..." required rows="7"></textarea>
+                              <textarea id="message" name="message" class="form-control" placeholder="Message Details ..." required rows="7"></textarea>
                               <div class="btn">
                                  <div class="wrap__btn-skew-r">
                                     <button class="btn-skew-r btn-effect "><span class="btn-skew-r__inner">send message</span></button>
@@ -267,8 +267,8 @@
                         <!-- end row -->
                         <div class="row">
                            <div class="col-xs-12">
-                              <div class="footer__name">: SHOWROOM LOCATION :</div>
-                              <div class="footer__text">1430 Broadway STE 1200 New York, NY 10018</div>
+                              <div class="footer__name">LOCATION:</div>
+                              <div class="footer__text">1430 Broadway STE 1200, New York, NY 10018</div>
                            </div>
                            <!-- end col -->
                         </div>
@@ -289,11 +289,11 @@
                               </div>
                               <div class="footer__item">
                                  <span class="footer__name">Hours:</span>
-                                 <span class="footer__text">Mon - Fri :: 9am - 5pm</span>
+                                 <span class="footer__text">Mon - Fri : 9am - 5pm</span>
                               </div>
                               <div class="footer__item">
                                  <span class="footer__name">Hours:</span>
-                                 <span class="footer__text">Sat - Sun :: 10am - 4pm</span>
+                                 <span class="footer__text">Sat - Sun : 10am - 4pm</span>
                               </div>
                            </div>
                            <!-- end col -->
@@ -321,7 +321,7 @@
             </div>
             <!-- end wrap-section-border -->
             <div class="footer__wrap-btn"> <a class="footer__btn scroll" href="#this-top">top</a> </div>
-            <div class="copyright">Copyrights 2024 - 2025 <a class="copyright__link" href="#">NextLane Auto</a> : : All rights reserved</div>
+            <div class="copyright">Copyrights 2024 - 2025 <a class="copyright__link" href="#">NextLane Auto</a> : All rights reserved</div>
          </footer>
       </div>
       <!-- end #wrapper -->
