--- a/request_a_free_quote.html
+++ b/request_a_free_quote.html
@@ -128,10 +128,10 @@
                <div class="container">
                   <div class="row">
                      <div class="col-xs-12">
-                        <div class="header-contacts">
+                       <!-- <div class="header-contacts">
                            <span class="header-contacts__item"><i class="icon fa fa-phone"></i>(516) 912-6413 </span>
                            <a class="header-contacts__item" href="mailto:sales@nextlaneauto.com"><i class="icon fa fa-envelope"></i>sales@nextlaneauto.com</a>
-                        </div>
+                        </div> -->
                         <ul class="social-links list-inline">
                            <li><a class="icon fa fa-facebook" href="https://www.facebook.com/share/1BQfSxZhQk/?mibextid=wwXIfr"></a></li>
                           <!-- <li><a class="icon fa fa-twitter" href="javascript:void(0);"></a></li> -->
@@ -245,8 +245,8 @@
                         <!-- end row -->
                         <div class="row">
                            <div class="col-xs-12">
-                              <div class="footer__name">: SHOWROOM LOCATION :</div>
-                              <div class="footer__text">1430 Broadway STE 1200 New York, NY 10018</div>
+                              <div class="footer__name">LOCATION:</div>
+                              <div class="footer__text">1430 Broadway STE 1200, New York, NY 10018</div>
                            </div>
                            <!-- end col -->
                         </div>
@@ -267,11 +267,11 @@
                               </div>
                               <div class="footer__item">
                                  <span class="footer__name">Hours:</span>
-                                 <span class="footer__text">Mon - Fri :: 9am - 5pm</span>
+                                 <span class="footer__text">Mon - Fri : 9am - 5pm</span>
                               </div>
                               <div class="footer__item">
                                  <span class="footer__name">Hours:</span>
-                                 <span class="footer__text">Sat - Sun :: 10am - 4pm</span>
+                                 <span class="footer__text">Sat - Sun : 10am - 4pm</span>
                               </div>
                            </div>
                            <!-- end col -->
@@ -299,7 +299,7 @@
             </div>
             <!-- end wrap-section-border -->
             <div class="footer__wrap-btn"> <a class="footer__btn scroll" href="#this-top">top</a> </div>
-            <div class="copyright">Copyrights 2024 - 2025 <a class="copyright__link" href="#">NextLane Auto</a> : : All rights reserved</div>
+            <div class="copyright">Copyrights 2024 - 2025 <a class="copyright__link" href="#">NextLane Auto</a> : All rights reserved</div>
          </footer>
       </div>
       <!-- end #wrapper -->
