success and failed mesege 01-14-2025

--- a/contact_us.html
+++ b/contact_us.html
@@ -230,6 +230,10 @@
                               <input id="subject" name="subject" class="form-control" type="text" placeholder="Subject" required>
                            </div>
                            <!-- end col --> 
+                           <div class="col-sm-6">
+                              <input id="email" name="email" class="form-control" type="email" placeholder="email@email.com" required>
+                           </div>
+                           <!-- end col --> 
                         </div>
                         <!-- end row -->
                         <div class="row">
