--- a/failed.html
+++ b/failed.html
@@ -148,31 +148,31 @@
 				<div class="block-title">
 					<div class="block-title__inner section-bg section-bg_second">
 						<div class="bg-inner">
-							<h1 class="ui-title-page">get pre-qualified</h1>
+							<h1 class="ui-title-page">Failed</h1>
 							<div class="decor-1 center-block"></div>
 							<ol class="breadcrumb">
 								<li><a href="home.html">HOME</a></li>
-								<li class="active">get pre-qualified in seconds</li>
+								<li class="active">Failed Sent</li>
 							</ol>
 						</div><!-- end bg-inner -->
 					</div><!-- end block-title__inner -->
 				</div><!-- end block-title -->
 
 				<!-- starts new block -->
-				<div style="text-align: center; padding: 50px 20px; background-color: #cc0000; color: white;">
+				<div style="text-align: center; padding: 50px 20px; background-color: #e00e0e; color: white;">
 					<h1 style="font-size: 3em; margin-bottom: 10px;">Message Failed!</h1>
 					<p style="font-size: 1.2em;">Unfortunately, we couldn't send your message. Please try again later.</p>
 				</div>
 				
 				<div style="display: flex; justify-content: center; align-items: center; min-height: 60vh;">
 					<div style="text-align: center; max-width: 600px; background-color: white; padding: 30px; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-						<img src="img/NetworkConnectIT Logo.png" alt="Error" style="max-width: 100%; height: auto; margin-bottom: 20px;">
-						<h2 style="font-size: 2.5em; color: #cc0000;">Something Went Wrong!</h2>
+						<img src="assets/nla.png" alt="Error" style="max-width: 100%; height: auto; margin-bottom: 20px;">
+						<h2 style="font-size: 2.5em; color: #e00e0e;">Something Went Wrong!</h2>
 						<p style="font-size: 1.1em; line-height: 1.5; color: #555;">
 							We apologize for the inconvenience. There was an error sending your message. Please ensure that all the details are correct and try submitting again.
 						</p>
-						<a href="/" style="display: inline-block; padding: 15px 30px; margin-top: 20px; background-color: #003366; color: white; font-size: 1.2em; border-radius: 5px; text-decoration: none;">Return to Home</a>
-						<a href="contact.html" style="display: inline-block; padding: 15px 30px; margin-top: 20px; background-color: #ff9900; color: white; font-size: 1.2em; border-radius: 5px; text-decoration: none;">Try Again</a>
+						<a href="/" style="display: inline-block; padding: 15px 30px; margin-top: 20px; background-color: #000000; color: white; font-size: 1.2em; border-radius: 5px; text-decoration: none;">Return to Home</a>
+						<a href="home.html" style="display: inline-block; padding: 15px 30px; margin-top: 20px; background-color: #e00e0e; color: white; font-size: 1.2em; border-radius: 5px; text-decoration: none;">Try Again</a>
 					</div>
 				</div>
 
