--- a/home.html
+++ b/home.html
@@ -407,7 +407,7 @@
                               <div class="col-md-5">
                                  <div class="slider-grid__inner slider-grid__inner_mod-a">
                                     <img class="img-responsive" src="assets/media/slider-grid/5.jpg" height="392" width="470" alt="foto"> <a class="slider-grid__btn btn btn-default btn-effect" href="javascript:void(0);"><span class="btn-inner">FEATURED</span></a>
-                                    <div class="slider-grid__wrap-name"> <span class="slider-grid__name">BMW 1 Series M Coupe</span> <span class="slider-grid__price">$28,490</span> </div>
+                                    <div class="slider-grid__wrap-name"> <span class="slider-grid__name">BMW 1 Series M Coupe</span> <span class="slider-grid__price">$</span> </div>
                                  </div>
                               </div>
                               <div class="col-md-7">
@@ -416,10 +416,10 @@
                                        <div class="slider-grid__inner slider-grid__inner_mod-b">
                                           <img class="img-responsive" src="assets/media/slider-grid/1.jpg" height="181" width="320" alt="foto"> <span class="slider-grid__name">McLaren 650S</span>
                                           <div class="slider-grid__hover">
-                                             <span class="slider-grid__price">$28,490</span>
+                                             <span class="slider-grid__price">$</span>
                                              <ul class="slider-grid__info list-unstyled">
                                                 <li><i class="icon icon-speedometer"></i>12,000</li>
-                                                <li><i class="icon icon-paper-plane"></i>2016</li>
+                                                <li><i class="icon icon-paper-plane"></i>2024</li>
                                              </ul>
                                           </div>
                                        </div>
@@ -428,10 +428,10 @@
                                        <div class="slider-grid__inner slider-grid__inner_mod-b">
                                           <img class="img-responsive" src="assets/media/slider-grid/2.jpg" height="181" width="320" alt="foto"> <span class="slider-grid__name">Jaguar XE 2016</span>
                                           <div class="slider-grid__hover">
-                                             <span class="slider-grid__price">$28,490</span>
+                                             <span class="slider-grid__price">$</span>
                                              <ul class="slider-grid__info list-unstyled">
                                                 <li><i class="icon icon-speedometer"></i>12,000</li>
-                                                <li><i class="icon icon-paper-plane"></i>2016</li>
+                                                <li><i class="icon icon-paper-plane"></i>2024</li>
                                              </ul>
                                           </div>
                                        </div>
@@ -442,10 +442,10 @@
                                        <div class="slider-grid__inner slider-grid__inner_mod-b">
                                           <img class="img-responsive" src="assets/media/slider-grid/3.jpg" height="181" width="320" alt="foto"> <span class="slider-grid__name">Mercedes Benz C Class</span>
                                           <div class="slider-grid__hover">
-                                             <span class="slider-grid__price">$28,490</span>
+                                             <span class="slider-grid__price">$</span>
                                              <ul class="slider-grid__info list-unstyled">
                                                 <li><i class="icon icon-speedometer"></i>12,000</li>
-                                                <li><i class="icon icon-paper-plane"></i>2016</li>
+                                                <li><i class="icon icon-paper-plane"></i>2024</li>
                                              </ul>
                                           </div>
                                        </div>
@@ -454,10 +454,10 @@
                                        <div class="slider-grid__inner slider-grid__inner_mod-b">
                                           <img class="img-responsive" src="assets/media/slider-grid/4.jpg" height="181" width="320" alt="foto"> <span class="slider-grid__name">Audi A6 Saloon</span>
                                           <div class="slider-grid__hover">
-                                             <span class="slider-grid__price">$28,490</span>
+                                             <span class="slider-grid__price">$</span>
                                              <ul class="slider-grid__info list-unstyled">
                                                 <li><i class="icon icon-speedometer"></i>12,000</li>
-                                                <li><i class="icon icon-paper-plane"></i>2016</li>
+                                                <li><i class="icon icon-paper-plane"></i>2024</li>
                                              </ul>
                                           </div>
                                        </div>
@@ -472,7 +472,7 @@
                               <div class="col-md-5">
                                  <div class="slider-grid__inner slider-grid__inner_mod-a">
                                     <img class="img-responsive" src="assets/media/slider-grid/5.jpg" height="392" width="470" alt="foto"> <a class="slider-grid__btn btn btn-default btn-effect" href="javascript:void(0);"><span class="btn-inner">FEATURED</span></a>
-                                    <div class="slider-grid__wrap-name"> <span class="slider-grid__name">BMW 1 Series M Coupe</span> <span class="slider-grid__price">$28,490</span> </div>
+                                    <div class="slider-grid__wrap-name"> <span class="slider-grid__name">BMW 1 Series M Coupe</span> <span class="slider-grid__price">$</span> </div>
                                  </div>
                               </div>
                               <div class="col-md-7">
@@ -481,10 +481,10 @@
                                        <div class="slider-grid__inner slider-grid__inner_mod-b">
                                           <img class="img-responsive" src="assets/media/slider-grid/1.jpg" height="181" width="320" alt="foto"> <span class="slider-grid__name">McLaren 650S</span>
                                           <div class="slider-grid__hover">
-                                             <span class="slider-grid__price">$28,490</span>
+                                             <span class="slider-grid__price">$</span>
                                              <ul class="slider-grid__info list-unstyled">
                                                 <li><i class="icon icon-speedometer"></i>12,000</li>
-                                                <li><i class="icon icon-paper-plane"></i>2016</li>
+                                                <li><i class="icon icon-paper-plane"></i>2024</li>
                                              </ul>
                                           </div>
                                        </div>
@@ -493,10 +493,10 @@
                                        <div class="slider-grid__inner slider-grid__inner_mod-b">
                                           <img class="img-responsive" src="assets/media/slider-grid/2.jpg" height="181" width="320" alt="foto"> <span class="slider-grid__name">Jaguar XE 2016</span>
                                           <div class="slider-grid__hover">
-                                             <span class="slider-grid__price">$28,490</span>
+                                             <span class="slider-grid__price">$</span>
                                              <ul class="slider-grid__info list-unstyled">
                                                 <li><i class="icon icon-speedometer"></i>12,000</li>
-                                                <li><i class="icon icon-paper-plane"></i>2016</li>
+                                                <li><i class="icon icon-paper-plane"></i>2024</li>
                                              </ul>
                                           </div>
                                        </div>
@@ -507,10 +507,10 @@
                                        <div class="slider-grid__inner slider-grid__inner_mod-b">
                                           <img class="img-responsive" src="assets/media/slider-grid/3.jpg" height="181" width="320" alt="foto"> <span class="slider-grid__name">Mercedes Benz C Class</span>
                                           <div class="slider-grid__hover">
-                                             <span class="slider-grid__price">$28,490</span>
+                                             <span class="slider-grid__price">$</span>
                                              <ul class="slider-grid__info list-unstyled">
                                                 <li><i class="icon icon-speedometer"></i>12,000</li>
-                                                <li><i class="icon icon-paper-plane"></i>2016</li>
+                                                <li><i class="icon icon-paper-plane"></i>2024</li>
                                              </ul>
                                           </div>
                                        </div>
@@ -519,10 +519,10 @@
                                        <div class="slider-grid__inner slider-grid__inner_mod-b">
                                           <img class="img-responsive" src="assets/media/slider-grid/4.jpg" height="181" width="320" alt="foto"> <span class="slider-grid__name">Audi A6 Saloon</span>
                                           <div class="slider-grid__hover">
-                                             <span class="slider-grid__price">$28,490</span>
+                                             <span class="slider-grid__price">$</span>
                                              <ul class="slider-grid__info list-unstyled">
                                                 <li><i class="icon icon-speedometer"></i>12,000</li>
-                                                <li><i class="icon icon-paper-plane"></i>2016</li>
+                                                <li><i class="icon icon-paper-plane"></i>2024</li>
                                              </ul>
                                           </div>
                                        </div>
@@ -537,7 +537,7 @@
                               <div class="col-md-5">
                                  <div class="slider-grid__inner slider-grid__inner_mod-a">
                                     <img class="img-responsive" src="assets/media/slider-grid/5.jpg" height="392" width="470" alt="foto"> <a class="slider-grid__btn btn btn-default btn-effect" href="javascript:void(0);"><span class="btn-inner">FEATURED</span></a>
-                                    <div class="slider-grid__wrap-name"> <span class="slider-grid__name">BMW 1 Series M Coupe</span> <span class="slider-grid__price">$28,490</span> </div>
+                                    <div class="slider-grid__wrap-name"> <span class="slider-grid__name">BMW 1 Series M Coupe</span> <span class="slider-grid__price">$</span> </div>
                                  </div>
                               </div>
                               <div class="col-md-7">
@@ -546,10 +546,10 @@
                                        <div class="slider-grid__inner slider-grid__inner_mod-b">
                                           <img class="img-responsive" src="assets/media/slider-grid/1.jpg" height="181" width="320" alt="foto"> <span class="slider-grid__name">McLaren 650S</span>
                                           <div class="slider-grid__hover">
-                                             <span class="slider-grid__price">$28,490</span>
+                                             <span class="slider-grid__price">$</span>
                                              <ul class="slider-grid__info list-unstyled">
                                                 <li><i class="icon icon-speedometer"></i>12,000</li>
-                                                <li><i class="icon icon-paper-plane"></i>2016</li>
+                                                <li><i class="icon icon-paper-plane"></i>2024</li>
                                              </ul>
                                           </div>
                                        </div>
@@ -558,10 +558,10 @@
                                        <div class="slider-grid__inner slider-grid__inner_mod-b">
                                           <img class="img-responsive" src="assets/media/slider-grid/2.jpg" height="181" width="320" alt="foto"> <span class="slider-grid__name">Jaguar XE 2016</span>
                                           <div class="slider-grid__hover">
-                                             <span class="slider-grid__price">$28,490</span>
+                                             <span class="slider-grid__price">$</span>
                                              <ul class="slider-grid__info list-unstyled">
                                                 <li><i class="icon icon-speedometer"></i>12,000</li>
-                                                <li><i class="icon icon-paper-plane"></i>2016</li>
+                                                <li><i class="icon icon-paper-plane"></i>2024</li>
                                              </ul>
                                           </div>
                                        </div>
@@ -572,10 +572,10 @@
                                        <div class="slider-grid__inner slider-grid__inner_mod-b">
                                           <img class="img-responsive" src="assets/media/slider-grid/3.jpg" height="181" width="320" alt="foto"> <span class="slider-grid__name">Mercedes Benz C Class</span>
                                           <div class="slider-grid__hover">
-                                             <span class="slider-grid__price">$28,490</span>
+                                             <span class="slider-grid__price">$</span>
                                              <ul class="slider-grid__info list-unstyled">
                                                 <li><i class="icon icon-speedometer"></i>12,000</li>
-                                                <li><i class="icon icon-paper-plane"></i>2016</li>
+                                                <li><i class="icon icon-paper-plane"></i>2024</li>
                                              </ul>
                                           </div>
                                        </div>
@@ -584,10 +584,10 @@
                                        <div class="slider-grid__inner slider-grid__inner_mod-b">
                                           <img class="img-responsive" src="assets/media/slider-grid/4.jpg" height="181" width="320" alt="foto"> <span class="slider-grid__name">Audi A6 Saloon</span>
                                           <div class="slider-grid__hover">
-                                             <span class="slider-grid__price">$28,490</span>
+                                             <span class="slider-grid__price">$</span>
                                              <ul class="slider-grid__info list-unstyled">
                                                 <li><i class="icon icon-speedometer"></i>12,000</li>
-                                                <li><i class="icon icon-paper-plane"></i>2016</li>
+                                                <li><i class="icon icon-paper-plane"></i>2024</li>
                                              </ul>
                                           </div>
                                        </div>
