--- a/success.html
+++ b/success.html
@@ -148,11 +148,11 @@
 				<div class="block-title">
 					<div class="block-title__inner section-bg section-bg_second">
 						<div class="bg-inner">
-							<h1 class="ui-title-page">get pre-qualified</h1>
+							<h1 class="ui-title-page">Success</h1>
 							<div class="decor-1 center-block"></div>
 							<ol class="breadcrumb">
 								<li><a href="home.html">HOME</a></li>
-								<li class="active">get pre-qualified in seconds</li>
+								<li class="active">Success Sent</li>
 							</ol>
 						</div><!-- end bg-inner -->
 					</div><!-- end block-title__inner -->
@@ -160,19 +160,19 @@
 
 				<!-- starts new block -->
 				  <!-- Success start -->
-				  <div style="text-align: center; padding: 50px 20px; background-color: #003366; color: white;">
+				  <div style="text-align: center; padding: 50px 20px; background-color: #000000; color: white;">
 					<h1 style="font-size: 3em; margin-bottom: 10px;">Thank You!</h1>
 					<p style="font-size: 1.2em;">Your message has been sent successfully. We will contact you soon.</p>
 				</div>
 				
 				<div style="display: flex; justify-content: center; align-items: center; min-height: 60vh;">
 					<div style="text-align: center; max-width: 600px; background-color: white; padding: 30px; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-						<img src="" alt="Thank You" style="max-width: 100%; height: auto; margin-bottom: 20px;">
-						<h2 style="font-size: 2.5em; color: #003366;">We Appreciate Your Effort!</h2>
-						<p style="font-size: 1.1em; line-height: 1.5; color: #555;">
+						<img src="assets/nla.png" alt="Thank You" style="max-width: 100%; height: auto; margin-bottom: 20px;">
+						<h2 style="font-size: 2.5em; color: #000000;">We Appreciate Your Effort!</h2>
+						<p style="font-size: 1.1em; line-height: 1.5; color: #000000;">
 							Your message is important to us, and we are committed to providing you with the best service. One of our representatives will be in touch with you shortly.
 						</p>
-						<a href="/" style="display: inline-block; padding: 15px 30px; margin-top: 20px; background-color: #ff9900; color: white; font-size: 1.2em; border-radius: 5px; text-decoration: none;">Return to Home</a>
+						<a href="home.html" style="display: inline-block; padding: 15px 30px; margin-top: 20px; background-color: #e00e0e; color: white; font-size: 1.2em; border-radius: 5px; text-decoration: none;">Return to Home</a>
 					</div>
 				</div>
 				<!-- Success end -->
