--- a/failed.html
+++ b/failed.html
@@ -171,8 +171,8 @@
 						<p style="font-size: 1.1em; line-height: 1.5; color: #555;">
 							We apologize for the inconvenience. There was an error sending your message. Please ensure that all the details are correct and try submitting again.
 						</p>
-						<a href="/" style="display: inline-block; padding: 15px 30px; margin-top: 20px; background-color: #000000; color: white; font-size: 1.2em; border-radius: 5px; text-decoration: none;">Return to Home</a>
-						<a href="home.html" style="display: inline-block; padding: 15px 30px; margin-top: 20px; background-color: #e00e0e; color: white; font-size: 1.2em; border-radius: 5px; text-decoration: none;">Try Again</a>
+						<a href="home.html" style="display: inline-block; padding: 15px 30px; margin-top: 20px; background-color: #000000; color: white; font-size: 1.2em; border-radius: 5px; text-decoration: none;">Return to Home</a>
+						<a href="contact_us.html" style="display: inline-block; padding: 15px 30px; margin-top: 20px; background-color: #e00e0e; color: white; font-size: 1.2em; border-radius: 5px; text-decoration: none;">Try Again</a>
 					</div>
 				</div>
 
