Last change today 01-14-2025

--- a/contact_us.html
+++ b/contact_us.html
@@ -231,7 +231,7 @@
                            </div>
                            <!-- end col --> 
                            <div class="col-sm-6">
-                              <input id="email" name="email" class="form-control" type="email" placeholder="email@email.com" required>
+                              <input id="email" name="email" class="form-control" type="text" placeholder="email@email.com" required>
                            </div>
                            <!-- end col --> 
                         </div>
