--- a/failed.html
+++ b/failed.html
@@ -152,7 +152,7 @@
 							<div class="decor-1 center-block"></div>
 							<ol class="breadcrumb">
 								<li><a href="home.html">HOME</a></li>
-								<li class="active">Failed Sent</li>
+								<li class="active">Failed</li>
 							</ol>
 						</div><!-- end bg-inner -->
 					</div><!-- end block-title__inner -->
