--- a/success.html
+++ b/success.html
@@ -152,7 +152,7 @@
 							<div class="decor-1 center-block"></div>
 							<ol class="breadcrumb">
 								<li><a href="home.html">HOME</a></li>
-								<li class="active">Success Sent</li>
+								<li class="active">Sent</li>
 							</ol>
 						</div><!-- end bg-inner -->
 					</div><!-- end block-title__inner -->
