Verify contact email v3 01-17-2025

--- a/contact_us.html
+++ b/contact_us.html
@@ -239,6 +239,9 @@
                         <div class="row">
                            <div class="col-xs-12">
                               <textarea id="message" name="message" class="form-control" placeholder="Message Details ..." required rows="7"></textarea>
+                              <div class="col-12">
+                                 <div class="g-recaptcha" data-sitekey="6LdcErsqAAAAAJhu0wLB3x8SGY0TDhCytZRIEIh1"></div>
+                             </div> 
                               <div class="btn">
                                  <div class="wrap__btn-skew-r">
                                     <button class="btn-skew-r btn-effect "><span class="btn-skew-r__inner">send message</span></button>
