--- a/contact_us.html
+++ b/contact_us.html
@@ -345,9 +345,11 @@
       <script src="assets/plugins/jelect/jquery.jelect.js"></script>
       <script src="assets/plugins/nouislider/jquery.nouislider.all.min.js"></script>
       <script src="assets/plugins/flexslider/jquery.flexslider.js"></script>
+      <script src="https://www.google.com/recaptcha/api.js" async defer></script>
       <!--THEME-->
       <script src="assets/js/cssua.min.js"></script>
       <script src="assets/js/wow.min.js"></script>
       <script src="assets/js/custom.js"></script>
+
    </body>
 </html>
