Send form to email v1 01-17-2025

--- a/request_a_free_quote.html
+++ b/request_a_free_quote.html
@@ -201,7 +201,7 @@
          <!-- starts new block -->
          <h3><span style="color: #e00e0e;">CLAIM</span> THIS OFFER!</h3>
          <p>FILL OUT THE FORM BELOW AND ONE OF OUR TEAM MEMBERS WILL CONTACT YOU SHORTLY!</p>
-         <form action="process_form.php" method="POST">
+         <form action="php/process_form.php" method="POST">
             <label for="first_name">First Name <span style="color: #e00e0e;">*</span></label>
             <input type="text" id="first_name" name="first_name" placeholder="First Name" required>
             <label for="last_name">Last Name <span style="color: #e00e0e;">*</span></label>
@@ -222,7 +222,7 @@
             </div>
             <div class="captcha-container">
                <!-- Include your CAPTCHA widget here -->
-               <div class="g-recaptcha" data-sitekey="your-site-key"></div>
+               <div class="g-recaptcha" data-sitekey="6LeDJrsqAAAAAOArFJw811iifNd0SKEjysX-gBw6"></div>
             </div>
             <div class="form-footer">
                <button type="submit">SUBMIT</button>
